--- a/styles/MakeIt.module.css
+++ b/styles/MakeIt.module.css
@@ -1,2 +1,2 @@
-#makeitbody{background-color:#b2e1bc}
+#makeitbody{background-color:#b2e1bc}#makeitblack{padding-top:330px;padding-bottom:330px}
 /*# sourceMappingURL=MakeIt.module.css.map */
