--- a/styles/AnalyzeIt.module.css
+++ b/styles/AnalyzeIt.module.css
@@ -1,2 +1,2 @@
-#analyzeitbody{background-color:#b2e1bc}
+#analyzeitbody{background-color:#b2e1bc;font-family:"Vinila Regular"}#starttext{color:#143db8}#modalbutton{background-color:#008060}#logintext{color:#008060}
 /*# sourceMappingURL=AnalyzeIt.module.css.map */
