--- a/styles/Community.module.css
+++ b/styles/Community.module.css
@@ -1,2 +1,2 @@
-#communitybody{background-color:#b2e1bc}
+#communitybody{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=Community.module.css.map */
