--- a/styles/FAQ1.module.css
+++ b/styles/FAQ1.module.css
@@ -1,2 +1,2 @@
-#faq1body{background-color:#b2e1bc}
+#faq1body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=FAQ1.module.css.map */
