--- a/styles/FAQ3.module.css
+++ b/styles/FAQ3.module.css
@@ -1,2 +1,2 @@
-#faq3body{background-color:#b2e1bc}
+#faq3body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=FAQ3.module.css.map */
