--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,2 +1,2 @@
-#footerbody{background-color:#b2e1bc}
+#footerbody{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=Footer.module.css.map */
