--- a/styles/GetStarted.module.scss
+++ b/styles/GetStarted.module.scss
@@ -4,6 +4,7 @@
 
 #getstartedbody {
   background-color: #b2e1bc;
+  font-family: "Vinila Regular";
 }
 
 #getstartedmodala {
@@ -12,4 +13,12 @@
 
 #getstartedmodalb {
   background-color: black;
+}
+
+#modalbutton {
+  background-color: #008060;
+}
+
+#logintext {
+  color: #008060;
 }
