--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,2 +1,2 @@
-#herobody{background-color:#b2e1bc;font-family:"Vinila Regular"}#buttonhero{background-color:#143db8}
+#herobody{background-color:#b2e1bc;font-family:"Vinila Regular"}#buttonhero{background-color:#143db8}#modalbutton{background-color:#008060}#logintext{color:#008060}
 /*# sourceMappingURL=Hero.module.css.map */
