--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -6,3 +6,11 @@
 #buttonhero {
   background-color: #143db8;
 }
+
+#modalbutton {
+  background-color: #008060;
+}
+
+#logintext {
+  color: #008060;
+}
