--- a/styles/MonetizeIt.module.css
+++ b/styles/MonetizeIt.module.css
@@ -1,2 +1,2 @@
-#monetizeitbody{background-color:#b2e1bc}
+#monetizeitbody{background-color:#b2e1bc;font-family:"Vinila Regular"}#getthatmoneytext{color:#143db8}#modalbutton{background-color:#008060}#logintext{color:#008060}
 /*# sourceMappingURL=MonetizeIt.module.css.map */
