--- a/styles/Question10.module.css
+++ b/styles/Question10.module.css
@@ -1,2 +1,2 @@
-#question10body{background-color:#b2e1bc}
+#question10body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=Question10.module.css.map */
