--- a/styles/Question5.module.css
+++ b/styles/Question5.module.css
@@ -1,2 +1,2 @@
-#question5body{background-color:#b2e1bc}
+#question5body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=Question5.module.css.map */
