--- a/styles/Question6.module.css
+++ b/styles/Question6.module.css
@@ -1,2 +1,2 @@
-#question6body{background-color:#b2e1bc}
+#question6body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=Question6.module.css.map */
