--- a/styles/Question7.module.css
+++ b/styles/Question7.module.css
@@ -1,2 +1,2 @@
-#question7body{background-color:#b2e1bc}
+#question7body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=Question7.module.css.map */
