--- a/styles/Question8.module.css
+++ b/styles/Question8.module.css
@@ -1,2 +1,2 @@
-#question8body{background-color:#b2e1bc}
+#question8body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=Question8.module.css.map */
