--- a/styles/Question9.module.css
+++ b/styles/Question9.module.css
@@ -1,2 +1,2 @@
-#question9body{background-color:#b2e1bc}
+#question9body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=Question9.module.css.map */
