--- a/styles/QuestionTitle.module.css
+++ b/styles/QuestionTitle.module.css
@@ -1,2 +1,2 @@
-#questiontitlebody{background-color:#b2e1bc}
+#questiontitlebody{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=QuestionTitle.module.css.map */
