--- a/styles/AnalyzeIt.module.scss
+++ b/styles/AnalyzeIt.module.scss
@@ -1,3 +1,16 @@
 #analyzeitbody {
   background-color: #b2e1bc;
+  font-family: "Vinila Regular";
+}
+
+#starttext {
+  color: #143db8;
+}
+
+#modalbutton {
+  background-color: #008060;
+}
+
+#logintext {
+  color: #008060;
 }
