--- a/styles/FAQ2.module.css
+++ b/styles/FAQ2.module.css
@@ -1,2 +1,2 @@
-#faq2body{background-color:#b2e1bc}
+#faq2body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=FAQ2.module.css.map */
