--- a/styles/FAQ4.module.css
+++ b/styles/FAQ4.module.css
@@ -1,2 +1,2 @@
-#faq4body{background-color:#b2e1bc}
+#faq4body{background-color:#b2e1bc;font-family:"Vinila Regular"}
 /*# sourceMappingURL=FAQ4.module.css.map */
