--- a/styles/MakeIt.module.css
+++ b/styles/MakeIt.module.css
@@ -1,2 +1,2 @@
-#makeitbody{background-color:#b2e1bc}#makeitblack{padding-top:330px;padding-bottom:330px}
+#makeitbody{background-color:#b2e1bc;font-family:"Vinila Regular"}#makeitblack{padding-top:330px;padding-bottom:330px}#makeittext{color:#143db8}#modalbutton{background-color:#008060}#logintext{color:#008060}
 /*# sourceMappingURL=MakeIt.module.css.map */
