--- a/styles/MakeIt.module.scss
+++ b/styles/MakeIt.module.scss
@@ -1,8 +1,21 @@
 #makeitbody {
   background-color: #b2e1bc;
+  font-family: "Vinila Regular";
 }
 
 #makeitblack {
   padding-top: 330px;
   padding-bottom: 330px;
+}
+
+#makeittext {
+  color: #143db8;
+}
+
+#modalbutton {
+  background-color: #008060;
+}
+
+#logintext {
+  color: #008060;
 }
