--- a/styles/MonetizeIt.module.scss
+++ b/styles/MonetizeIt.module.scss
@@ -1,3 +1,16 @@
 #monetizeitbody {
   background-color: #b2e1bc;
+  font-family: "Vinila Regular";
+}
+
+#getthatmoneytext {
+  color: #143db8;
+}
+
+#modalbutton {
+  background-color: #008060;
+}
+
+#logintext {
+  color: #008060;
 }
