--- a/styles/ShareIt.module.css
+++ b/styles/ShareIt.module.css
@@ -1,2 +1,2 @@
-#shareitbody{background-color:#b2e1bc}
+#shareitbody{background-color:#b2e1bc;font-family:"Vinila Regular"}#upgradetext{color:#143db8}#modalbutton{background-color:#008060}#logintext{color:#008060}
 /*# sourceMappingURL=ShareIt.module.css.map */
