--- a/styles/ShareIt.module.scss
+++ b/styles/ShareIt.module.scss
@@ -1,3 +1,16 @@
 #shareitbody {
   background-color: #b2e1bc;
+  font-family: "Vinila Regular";
+}
+
+#upgradetext {
+  color: #143db8;
+}
+
+#modalbutton {
+  background-color: #008060;
+}
+
+#logintext {
+  color: #008060;
 }
